Finished SPA-268,270,271 abd fixed layout issues

--- a/src/app/admin/accounts-role/accounts-role.component.scss
+++ b/src/app/admin/accounts-role/accounts-role.component.scss
@@ -6,6 +6,7 @@
   background-color: #F8FAFF;
   overflow-y: scroll;
   .accounts-role-wrapper{
+    min-width: 780px;
     width: 100%;
     height: 100%;
     .card{
