--- a/src/app/admin/accounts/accounts.component.scss
+++ b/src/app/admin/accounts/accounts.component.scss
@@ -1,10 +1,13 @@
 :host{
   width: 100%;
+  height: 100%;
   box-sizing: border-box;
-  padding: 25px;
+  padding: 40px;
   background-color: #F8FAFF;
+  overflow-y: scroll;
   .account-wrapper{
-    padding: 15px;
+    min-width: 910px;
+    width: 100%;
     height: 100%;
     .accounts{
       div:first-child{
