--- a/src/app/admin/nav/nav.component.scss
+++ b/src/app/admin/nav/nav.component.scss
@@ -26,7 +26,7 @@
 .nav-footer{
     bottom: 0;
     position: absolute;
-    height: 60px;
+    height: 70px;
     width: 100%;
     display: flex;
     flex-direction: row;
